       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 1-Apr-2003
Problems fixed:
    1. HttpUnit now handles refresh headers without explicit URLs, defaulting to refreshing the containing page.

28-Mar-2003
Acknowledgements:
    Thanks to Ron Webster for designing the new HttpUnit logo.

27-Mar-2003
Acknowledgements:
    Thanks to Mark Luty for supplying a test for the getElementsByName function.

Additions:
    1. Document.getElementsByName is now supported

26-Mar-2003
Problems fixed:
    1. HttpUnit was chopping off javascript urls if they contained a '#' character.

24-Mar-2003
Acknowledgements:
    Thanks to Andrew Bickerton for identifying the javascript parent frame update problem and suggesting a fix.

Problems fixed:
    1. Following a javascript link which updated a parent frame via manipulating the location was causing a 'NoSuchFrame'
       exception to be thrown.

 23-Mar-2003
Problems fixed:
    1. ServletUnit had not implemented HttpServletRequest.getURL();
    2. ServletUnit was always supplying a charset parameter, even when not requested.

 20-Mar-2003
Problems fixed:
    1. ServletUnit had not implemented HttpServletRequest.getContentLength();

 19-Mar-2003
Acknowledgements:
    Thanks to Brendan Boesen for correcting the session invalidation problem.
    Thanks to Andrew Bickerton for correcting the document.write append problem.

Problems fixed:
    1. ServletUnit was creating a new session if the current one was not valid, even if "create" was not specified.
    2. calling document.write on a closed document was appending to rather than replacing its contents.

Additions:
    1. PseudoServer now handles persistent connections.
    2. ClientProperties now supports a listener which allows for the override of DNS mapping, allowing a client